--- a/_theme-styles/theme.css
+++ b/_theme-styles/theme.css
@@ -12,7 +12,7 @@ body {
   font-family: 'Roboto Condensed', "Helvetica Neue", Helvetica, Arial, sans-serif;
 
   /* DARK PINK */
-  background: #f2395a;
+  background: #784d72;
 
   /*TEAL*/
   /*background: #00B3B4;*/
@@ -69,7 +69,7 @@ h1,h2,h3,h4,h5,h6 {
     h1 small {
       font-size: 3rem;
       display: block;
-      color: #fa90a3;
+      color: #bf74b5;
       text-shadow: none;
     }
 
